--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -24,9 +24,9 @@ jobs:
       R_COMPILE_AND_INSTALL_PACKAGES: 'never'
       
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: r-lib/actions/setup-r@v2-branch
+      - uses: r-lib/actions/setup-r@v2
 
       - name: Query dependencies
         run: |
