--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Query dependencies
         run: |
           install.packages("ctv")
-          saveRDS("ctv", ".github/depends.Rds", version = 2)
+          install.packages("knitr")
+          saveRDS(c("ctv", "knitr"), ".github/depends.Rds", version = 2)
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
         shell: Rscript {0}
 
