--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           install.packages("ctv")
           install.packages("knitr")
+          install.packages("rmarkdown")
           saveRDS(c("ctv", "knitr"), ".github/depends.Rds", version = 2)
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
         shell: Rscript {0}
