--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -27,6 +27,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: r-lib/actions/setup-r@v2
+     
+      - uses: r-lib/actions/setup-pandoc@master
 
       - name: Query dependencies
         run: |
