--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -3,6 +3,7 @@ on:
     branches:
       - main
       - master
+      - gha-failure
     paths:
       - '.github/workflows/validate-ctv.yml'
       - 'Phylogenetics.md'
