--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -75,7 +75,7 @@ jobs:
           ok <- RCurl::url.exists(urls)
           if (any(!ok)) {
             message("::warning file=Phylogenetics.md::Inoperational links")
-            warning("URLs did not return OK status:\n - ",
+            stop("URLs did not return OK status:\n - ",
                 paste0(names(ok)[!ok], collapse = "\n - ")
             )
           }
