--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -3,6 +3,7 @@ on:
     branches:
       - main
       - master
+      - gha*
     paths:
       - '.github/workflows/validate-ctv.yml'
       - 'Phylogenetics.md'
@@ -22,17 +23,17 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_COMPILE_AND_INSTALL_PACKAGES: 'never'
-      
+
     steps:
       - uses: actions/checkout@v3
 
-      - uses: r-lib/actions/setup-r@v2      
-      
+      - uses: r-lib/actions/setup-r@v2
+
       - name: Install apt packages (Linux)
         if: runner.os == 'Linux'
         run: |
           sudo apt-get install libcurl4-openssl-dev
-     
+
       - uses: r-lib/actions/setup-pandoc@v2
 
       - name: Cache R packages
@@ -65,7 +66,7 @@ jobs:
             stop("See errors identified above")
           }
         shell: Rscript {0}
-        
+
       - name: check other links
         run: |
           links <- ctv::read.ctv("Phylogenetics.md")$otherlinks
