--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -58,13 +58,26 @@ jobs:
       - name: check_ctv_packages
         run: |
           result <- ctv::check_ctv_packages("Phylogenetics.md")
-          archived <- result[[4]]
           exceptArchive <- result[-4]
           failures <- lengths(exceptArchive) > 0
           if (any(failures)) {
             print(result[failures])
             message("\n\n\n\n") # "Stop" command sometimes appears early
             stop("See errors identified above")
+          }
+          
+          archived <- result[[4]]
+          if (length(archived)) {
+            previousArchive <- ctv::check_ctv_packages(
+             "https://raw.githubusercontent.com/cran-task-views/Phylogenetics/main/Phylogenetics.md"
+            )[["Packages in packagelist but archived on CRAN"]]
+            newArchives <- setdiff(archived, previousArchive)
+            if (length(newArchives)) {
+                stop(
+                  "Newly introduced packaged are archived:\n -",
+                  paste0(newArchives, collapse = "\n - ")
+                )
+            }
           }
         shell: Rscript {0}
         
