Squashed commit of the following:
commit 284e396c1713aaf3d638492bfe2d95615da5b5bc
Author: Martin R. Smith <1695515+ms609@users.noreply.github.com>
Date:   Wed Nov 2 16:34:10 2022 +0000

    Typos

commit ba2cd5354fab46594b2ac634894347c39057c656
Author: Martin R. Smith <1695515+ms609@users.noreply.github.com>
Date:   Wed Nov 2 16:33:05 2022 +0000

    Check for new archive introductions

commit 79b82d95c04e8b5dc589c64321cdcdea52759d82
Author: Martin R. Smith <1695515+ms609@users.noreply.github.com>
Date:   Wed Nov 2 16:28:14 2022 +0000

    Pass if archived

--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -59,11 +59,26 @@ jobs:
       - name: check_ctv_packages
         run: |
           result <- ctv::check_ctv_packages("Phylogenetics.md")
-          failures <- lengths(result) > 0
+          exceptArchive <- result[-4]
+          failures <- lengths(exceptArchive) > 0
           if (any(failures)) {
             print(result[failures])
             message("\n\n\n\n") # "Stop" command sometimes appears early
             stop("See errors identified above")
+          }
+          
+          archived <- result[[4]]
+          if (length(archived)) {
+            previousArchive <- ctv::check_ctv_packages(
+             "https://raw.githubusercontent.com/cran-task-views/Phylogenetics/main/Phylogenetics.md"
+            )[["Packages in packagelist but archived on CRAN"]]
+            newArchives <- setdiff(archived, previousArchive)
+            if (length(newArchives)) {
+                stop(
+                  "Adding archived packages:\n - ",
+                  paste0(newArchives, collapse = "\n - ")
+                )
+            }
           }
         shell: Rscript {0}
 
