--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -14,83 +14,15 @@ on:
       - '.github/workflows/validate-ctv.yml'
       - 'Phylogenetics.md'
 
-name: validate-ctv
+name: Validate task view
 
 jobs:
   validate-ctv:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      R_COMPILE_AND_INSTALL_PACKAGES: 'never'
-      
+
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: r-lib/actions/setup-r@v2      
-      
-      - name: Install apt packages (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get install libcurl4-openssl-dev
-     
-      - uses: r-lib/actions/setup-pandoc@v2
-
-      - name: Cache R packages
-        uses: actions/cache@v3
+      - uses: ms609/actions/validate-ctv@main
         with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
-
-      - name: Install R packages
-        run: |
-          install.packages("ctv")
-          install.packages("knitr")
-          install.packages("rmarkdown")
-          install.packages("RCurl")
-        shell: Rscript {0}
-
-      - name: ctv2html
-        run: |
-          ctv::ctv2html("Phylogenetics.md")
-        shell: Rscript {0}
-
-      - name: check_ctv_packages
-        run: |
-          result <- ctv::check_ctv_packages("Phylogenetics.md")
-          exceptArchive <- result[-4]
-          failures <- lengths(exceptArchive) > 0
-          if (any(failures)) {
-            print(result[failures])
-            message("\n\n\n\n") # "Stop" command sometimes appears early
-            stop("See errors identified above")
-          }
-          
-          archived <- result[[4]]
-          if (length(archived)) {
-            previousArchive <- ctv::check_ctv_packages(
-             "https://raw.githubusercontent.com/cran-task-views/Phylogenetics/main/Phylogenetics.md"
-            )[["Packages in packagelist but archived on CRAN"]]
-            newArchives <- setdiff(archived, previousArchive)
-            if (length(newArchives)) {
-                stop(
-                  "Adding archived packages:\n - ",
-                  paste0(newArchives, collapse = "\n - ")
-                )
-            }
-          }
-        shell: Rscript {0}
-        
-      - name: check other links
-        if: success() || failure()
-        run: |
-          links <- ctv::read.ctv("Phylogenetics.md")$otherlinks
-          urls <- sub(".*href=\"(.*)\".*", "\\1", links)
-          ok <- RCurl::url.exists(urls)
-          if (any(!ok)) {
-            message("::warning file=Phylogenetics.md::Inoperational links")
-            stop("URLs did not return OK status:\n - ",
-                paste0(names(ok)[!ok], collapse = "\n - ")
-            )
-          }
-        shell: Rscript {0}
+          task-view: Phylogenetics
