use ctv/action/validate-ctv

--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -20,6 +20,4 @@ jobs:
   validate-ctv:
     runs-on: ubuntu-latest
     steps:
-      - uses: ms609/actions/validate-ctv@main
-        with:
-          task-view: Phylogenetics
+      - uses: ctv/action/validate-ctv@main
