cran-task-views/ctv/action

--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -20,4 +20,4 @@ jobs:
   validate-ctv:
     runs-on: ubuntu-latest
     steps:
-      - uses: ctv/action/validate-ctv@main
+      - uses: cran-task-views/ctv/action@main
