--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -13,6 +13,8 @@ on:
     paths:
       - '.github/workflows/validate-ctv.yml'
       - 'Phylogenetics.md'
+  schedule:
+    - cron: '30 5 1 * *'
 
 name: Validate task view
 
