--- a/.github/workflows/validate-ctv.yml
+++ b/.github/workflows/validate-ctv.yml
@@ -75,7 +75,7 @@ jobs:
             } else {
                 previousArchive <- ctv::check_ctv_packages(
                  paste0("https://raw.githubusercontent.com/cran-task-views/",
-                 basename(getwd()), "/main/", basename(getwd()), ".md"
+                 basename(getwd()), "/${{ github.base_ref || github.ref_name }}/", basename(getwd()), ".md"
                 ))[["Packages in packagelist but archived on CRAN"]]
                 newArchives <- setdiff(archived, previousArchive)
                 if (length(newArchives)) {
